--- a/css/pages/account.css
+++ b/css/pages/account.css
@@ -61,7 +61,6 @@
     transition: 2s;
 }
 
-
 .user-info{
     display: flex;
     align-items: center;
@@ -92,303 +91,261 @@
     border-radius: 50%;
 }
 
-.customer-review-1{ 
+.account-info{
+    display: flex;
+    width: 1200px;
+    margin-left: 12rem;
+    justify-content: space-between;
+}
+
+.account-dashboard{
+    width: 298px;
+    height:580px;
+    top: 168px;
+    left: 140px;
+    padding: 24px;
+    gap: 0px;
+    border-radius: 8px;
+    border: 2px solid #D7E5BE;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-between;
+}
+
+.account-dashboard h1{
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    text-align: left;
+    color: #2E2E2E;
+}
+
+.account-dashboard p{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+    color: #2E2E2E;
+}
+
+#log-out{
+    color: #FF0000 ;
+}
+
+.fa-right-from-bracket{
+    color:#FF0000;
+}
+
+.account-info-2{
+    width: 666px;
+    height: 994px;
+    top: 168px;
+    left: 535px;
+    gap: 24px;
+}
+
+.user-details{
     display: flex;
     justify-content: space-between;
-    margin-left: 12rem;
-    margin-right: 12rem;
+    width: 666px;
+    height: 128px;
+    padding: 24px;
+    border-radius: 8px;
+    border: 2px solid #D7E5BE;
+
 }
 
-.customer-review-1 img{
-    width: 104px;
-    height: 127px;
-    border-radius: 16px;
-}
-
-.customer-review-image{
+.user-profile{
     display: flex;
 }
 
-.customer-review-image p{
+.user-profile img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.user-profile p{
     font-size: 24px;
     font-weight: 500;
     line-height: 36px;
     text-align: left;
     color: #2E2E2E;
-    margin-left: 20px;
 }
 
-.customer-review-info h1{
-    font-size: 32px;
-    font-weight: 600;
-    line-height: 48px;
-    text-align: left;
-    color:#2E2E2E;
-}
-
-.customer-review-info h4{
-    font-size: 24px;
+.user-profile h5{   
+    font-size: 16px;
     font-weight: 500;
-    line-height: 36px;
+    line-height: 24px;
     text-align: left;
     color: #4E4E4E;
-    margin-bottom: 30px;
-
-}
-.customer-review-info i{
-    color: #FFA500;
-    width: 24px;
-    height: 24px;
-    opacity: 0.99px;
-    font-size: 24px;
 }
 
-#stars{
-    display: flex;
-align-items: center;
-
-}
-
-#stars p{
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    text-align: left;
-    color: #2E2E2E;
-    margin-bottom: 20px;
-    position: relative;
-    top: 14px;
-}
-
-.star-rating{
-    margin-top: 10px;
-    margin-left: 12rem;
-    display: flex;
-    align-items: center;
-    width: 383px;
-    /* background-color: #004C1F; */
-    justify-content: space-between;
-}
-
-.star-rating p,h5{
+#edit-btn{
+    width: 46px;
+    height:40px;
+    padding: 8px;
+    gap: 10px;
+    border-radius: 8px;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     text-align: left;
+    color:#F3F4E5;
+    background-color: #2E2E2E;
+    cursor: pointer;
+}
+
+.user-profile-1{
+    display: flex;
+    flex-direction: row;
+}
+
+.personal-information{
+    display: flex;
+    justify-content: space-between;
+}
+
+.user-details-2{
+    margin-top: 20px;
+    width: 666px;
+    height: 178px;
+    padding: 24px;
+    border-radius: 8px;
+    border: 2px solid #D7E5BE;
+}
+
+.user-details-2 h4{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    text-align: left;
+    color: #2E2E2E;
+    margin-bottom: 10px;
+}
+
+.personal-info-info{
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+}
+
+.user-profile-1{
+    display: flex;
+}
+
+.personal-info-1{
+    margin-right: 80px;
+    margin-bottom:10px ;
+}
+
+.personal-info-2{
+    margin-right: 50px;
+}
+
+.personal-info-1 h5{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #6E6E6E;
+} 
+
+.personal-info-1 h6{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
     color: #2E2E2E;
 }
 
-#rating-5{
-    width: 271px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #E4E4E4;
-    color: #E4E4E4;
-}
-
-#rating-10{
-    width: 230px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #FFA500;
-    color: #FFA500;
-    position: relative;
-    top: -22px;
-    left: 0px;
-}
-
-#rating-8{
-    width: 79px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #FFA500;
-    color: #FFA500;
-    position: relative;
-    top: -22px;
-    left: 0px;
-}
-
-#rating-6{
-    width: 23px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #FFA500;
-    color: #FFA500;
-    position: relative;
-    top: -22px;
-    left: 0px;
-}
-
-#review-text{
-    width: 568px;
-    margin-left: 12rem;
-    margin-top: 30px;
-    height: 143px;
-    padding: 24px 377px 95px 24px;
-    border-radius: 8px;
-    border: none;
-    background-color: #F3F4E5;
-}
-
-#review-text::placeholder{
+.personal-info-2 h5{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 24px;
-    text-align: left;
     color: #6E6E6E;
 }
 
-.submit-review{
-    display: flex;
-    width: 400px;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 12rem;
+.personal-info-2 h6{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #2E2E2E;
+}
+
+.address{
+    width: 666px;
+    height: 410px;
+    padding: 24px 370px 0px 24px;
+    border-radius: 8px;
+    border: 2px solid #D7E5BE;
+    margin-left: -25px;
     margin-top: 20px;
 }
 
-.submit-review button{
-    width: Hug (130px)px;
-    height: Hug (40px)px;
-    top: 167px;
-    padding: 8px;
-    gap: 10px;
-    border-radius: 8px;
-    border: none;
-    background-color: #2E2E2E;
-    color: #F3F4E5 ;
+.address h4{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    text-align: left;
+    color: #2E2E2E;
 }
 
-.submit-review p{
+.div-1{
+    margin-bottom: 30px;
+}
+
+.div-1 label{
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     text-align: left;
-    color: #000000;
 }
 
-.submit-review i{
-    width: 24px;
-    height: 24px;
-    opacity: 0.99px;
-    color: #E4E4E4;
+.address-info input{
+    width: 272px;
+    height: 46px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px solid #4E4E4E ;
 }
 
-.customer-review-info{
-    display: flex;
-    flex-direction: column;
-}
-
-#customer-review{
+.address-info::placeholder{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
     text-align: left;
-    margin-bottom: 20px;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 36px;
-    color: #2E2E2E;
+    color: #4E4E4E;
 }
 
-.review-1{
-    background-color: #F3F4E5;
-    width: 677px;
-    height: 175px;
+.user-account-info{
+    width: 666px;
+    height: 152px;
     padding: 24px;
     border-radius: 8px;
+    border: 2px solid #D7E5BE;
+    margin-left: -25px;
+    margin-top: 20px; 
+}
+
+.user-account-info h5{
     margin-bottom: 20px;
-}
-
-.review-1 p{
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    text-align: left;
-    color: #2E2E2E;
-}
-
-.review-info{
-    display: flex;
-    align-items: center;
-}
-
-.review-info img{
-    width: 48px;
-    height: 48px;
-    border-radius:50%;
-    margin-right: 8px;
-}
-
-.review-info p{
-    margin-right: 8px;
-}
-
-.review-info i{
-    width: 16px;
-    height: 16px;
-    opacity: 0.99px;
-    color: #FFA500;
     font-size: 16px;
-}
-
-#black-star{
-    color: #E4E4E4;
-}
-
-.customer-review-2{
-    display: flex;
-    flex-direction:column;
-    margin-top: 30px;
-    margin-left: 12rem;
-}
-
-#next-btn-1{
-    width: 150px;
-    height: Hug (40px)px;
-    top: 2944px;
-    left: 140px;
-    padding: 8px;
-    gap: 10px;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #F3F4E5;
-    background-color: #2E2E2E;
-    border: none;
-    margin-bottom: 20px;
-}
-
-#next-btn{
-    width: 98px;
-    height: Hug (40px)px;
-    top: 2944px;
-    left: 140px;
-    padding: 8px;
-    gap: 10px;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 24px;
     text-align: left;
     color: #2E2E2E;
-    border: none;
-    margin-bottom: 20px;
 }
 
-#next-btn:hover{
-    background-color: #2E2E2E;
-    color:#F3F4E5;
-    transition: 0.2s;
+.account-step-down{
+    display: flex;
+    justify-content: space-between;
 }
 
-#next-btn-1:hover{
-    background-color: #F3F4E5;
-    color:#2E2E2E;
-    transition: 0.2s;
+.account-step-down-1{
+    width: 250px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .footer{
@@ -574,10 +531,3 @@ align-items: center;
     width: 37px;
     height: 56px;
 }
-
-
-
-
-
-
-
