--- a/css/pages/tracking-page.css
+++ b/css/pages/tracking-page.css
@@ -92,302 +92,149 @@
     border-radius: 50%;
 }
 
-.customer-review-1{ 
+.tracking-details{
     display: flex;
-    justify-content: space-between;
+    margin-left: 12rem;
+    margin-bottom: 40px;
+}
+
+#heading{
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 48px;
+    text-align: center;
+    margin-bottom: 35px;
+    color: #2E2E2E;
+}
+
+.tracking-details img{
+    width: 371px;
+    height: 411px;
+    top: 288px;
+    left: 140px;
+    border-radius: 16px;
+    margin-right: 30px;
+    margin-top: 20px;
+}
+
+.tracking-detail-info h2{
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom:20px;
+    color: #4E4E4E;
+}
+
+.tracking-detail-info h2 span{
+    color: #2E2E2E;
+}
+
+hr{
     margin-left: 12rem;
     margin-right: 12rem;
 }
 
-.customer-review-1 img{
-    width: 104px;
-    height: 127px;
-    border-radius: 16px;
-}
-
-.customer-review-image{
-    display: flex;
-}
-
-.customer-review-image p{
+.tracking-detail-info h3 {
     font-size: 24px;
-    font-weight: 500;
-    line-height: 36px;
-    text-align: left;
-    color: #2E2E2E;
-    margin-left: 20px;
-}
-
-.customer-review-info h1{
-    font-size: 32px;
     font-weight: 600;
-    line-height: 48px;
-    text-align: left;
-    color:#2E2E2E;
-}
-
-.customer-review-info h4{
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 36px;
-    text-align: left;
-    color: #4E4E4E;
-    margin-bottom: 30px;
-
-}
-.customer-review-info i{
-    color: #FFA500;
-    width: 24px;
-    height: 24px;
-    opacity: 0.99px;
-    font-size: 24px;
-}
-
-#stars{
-    display: flex;
-align-items: center;
-
-}
-
-#stars p{
-    font-size: 24px;
-    font-weight: 400;
     line-height: 36px;
     text-align: left;
     color: #2E2E2E;
-    margin-bottom: 20px;
-    position: relative;
-    top: 14px;
+    margin-top: 60px;
+    margin-bottom:20px;
 }
 
-.star-rating{
-    margin-top: 10px;
-    margin-left: 12rem;
+.delivery-progress{
     display: flex;
-    align-items: center;
-    width: 383px;
-    /* background-color: #004C1F; */
+    width: 500px;
     justify-content: space-between;
 }
 
-.star-rating p,h5{
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #2E2E2E;
+.on-the-way p{
+    width: 99px;
+    height: 8px;
+    top: 29px;
+    border-radius: 20px;
+    background-color: #D7E5BE;
 }
 
-#rating-5{
-    width: 271px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #E4E4E4;
-    color: #E4E4E4;
-}
-
-#rating-10{
-    width: 230px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #FFA500;
-    color: #FFA500;
-    position: relative;
-    top: -22px;
-    left: 0px;
-}
-
-#rating-8{
-    width: 79px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #FFA500;
-    color: #FFA500;
-    position: relative;
-    top: -22px;
-    left: 0px;
-}
-
-#rating-6{
-    width: 23px;
-    height: 33px;
-    left: 62px;
-    border-radius: 8px;
-    background-color: #FFA500;
-    color: #FFA500;
-    position: relative;
-    top: -22px;
-    left: 0px;
-}
-
-#review-text{
-    width: 568px;
-    margin-left: 12rem;
-    margin-top: 30px;
-    height: 143px;
-    padding: 24px 377px 95px 24px;
-    border-radius: 8px;
-    border: none;
-    background-color: #F3F4E5;
-}
-
-#review-text::placeholder{
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-    color: #6E6E6E;
-}
-
-.submit-review{
-    display: flex;
-    width: 400px;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 12rem;
-    margin-top: 20px;
-}
-
-.submit-review button{
-    width: Hug (130px)px;
-    height: Hug (40px)px;
-    top: 167px;
-    padding: 8px;
-    gap: 10px;
-    border-radius: 8px;
-    border: none;
-    background-color: #2E2E2E;
-    color: #F3F4E5 ;
-}
-
-.submit-review p{
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #000000;
-}
-
-.submit-review i{
-    width: 24px;
-    height: 24px;
-    opacity: 0.99px;
-    color: #E4E4E4;
-}
-
-.customer-review-info{
-    display: flex;
-    flex-direction: column;
-}
-
-#customer-review{
-    text-align: left;
-    margin-bottom: 20px;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 36px;
-    color: #2E2E2E;
-}
-
-.review-1{
-    background-color: #F3F4E5;
-    width: 677px;
-    height: 175px;
-    padding: 24px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-}
-
-.review-1 p{
+.on-the-way h5{
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 21px;
-    text-align: left;
     color: #2E2E2E;
 }
 
-.review-info{
-    display: flex;
-    align-items: center;
+.Delivered p{
+    width: 99px;
+    height: 8px;
+    top: 29px;
+    border-radius: 20px;
+    background-color: #F0FFDB;
 }
 
-.review-info img{
-    width: 48px;
-    height: 48px;
-    border-radius:50%;
-    margin-right: 8px;
+.Delivered h5{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    color: #2E2E2E;
 }
 
-.review-info p{
-    margin-right: 8px;
+.Pick-up p{
+    width: 99px;
+    height: 8px;
+    top: 29px;
+    border-radius: 20px;
+    background-color: #E2FFEE;
 }
 
-.review-info i{
-    width: 16px;
-    height: 16px;
-    opacity: 0.99px;
-    color: #FFA500;
-    font-size: 16px;
+.Pick-up h5{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    color: #2E2E2E;
 }
 
-#black-star{
-    color: #E4E4E4;
+.Expired p{
+    width: 99px;
+    height: 8px;
+    top: 29px;
+    border-radius: 20px;
+    background-color: #FFBFBF;
 }
 
-.customer-review-2{
-    display: flex;
-    flex-direction:column;
-    margin-top: 30px;
-    margin-left: 12rem;
+.Expired h5{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    color: #2E2E2E;
 }
 
-#next-btn-1{
-    width: 150px;
-    height: Hug (40px)px;
-    top: 2944px;
-    left: 140px;
-    padding: 8px;
+.submit-btn{
+    width: 272px;
+    height: Hug (46px)px;
+    top: 599px;
+    left: 535px;
+    padding: 11px;
     gap: 10px;
     border-radius: 8px;
+    background-color: #004C1F;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
-    text-align: left;
+    text-align: center;
     color: #F3F4E5;
-    background-color: #2E2E2E;
+    margin-top: 30px;
     border: none;
-    margin-bottom: 20px;
+    cursor: pointer;
 }
 
-#next-btn{
-    width: 98px;
-    height: Hug (40px)px;
-    top: 2944px;
-    left: 140px;
-    padding: 8px;
-    gap: 10px;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #2E2E2E;
-    border: none;
-    margin-bottom: 20px;
-}
-
-#next-btn:hover{
-    background-color: #2E2E2E;
+.submit-btn:hover{
     color:#F3F4E5;
-    transition: 0.2s;
-}
-
-#next-btn-1:hover{
-    background-color: #F3F4E5;
-    color:#2E2E2E;
+    width: 275px;
+    height: 50px;
     transition: 0.2s;
 }
 
@@ -574,8 +421,6 @@ align-items: center;
     width: 37px;
     height: 56px;
 }
-
-
 
 
 
