--- a/css/pages/about-us.css
+++ b/css/pages/about-us.css
@@ -125,11 +125,10 @@
     padding: 8px 16px 8px 16px;
     gap: 10px;
     border-radius: 35px;
-    margin-right: -190px;
 }
 
 .hero{
-    background-image: url(./images/f5ee094318c8cec5737a5dc517ebe7fc.jpeg);
+    background-image: url(/assets/images/aboutus-landing-page.jpeg);
 }
 
 .hero h1{
