--- a/css/pages/blog-page.css
+++ b/css/pages/blog-page.css
@@ -21,6 +21,128 @@
 #nav-bar{
     display: flex;
     align-items: center;
+    margin: 5rem 12rem 7rem 12rem;
+    padding:1rem;
+    justify-content: space-between;
+    border: 2px solid white;
+    border-radius: 60px;
+    background-color: white;
+    font-size: 20px;
+}
+
+#nav-bar img{
+    width: 37px;
+    height: 56px;
+}
+
+#nav-bar h5{
+    color:#004C1F;
+    margin-left: -200px;
+}
+
+#nav-bar ul li{
+    list-style-type: none;
+    display:inline-block;
+    padding: 10px 20px;
+    font-weight: bold;
+}
+
+#nav-bar ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+#nav-bar ul li a:hover{
+    text-decoration: none;
+    color: #004C1F;
+    font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
+}
+
+#btn-1{
+    border: 3px solid green;
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (94px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 4px;
+    border-radius: 34px;
+    border: 2px solid #004C1F ;
+    }
+
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
+#btn-2{
+    border:none;
+    background-color: #004C1F;
+    color:#EBFDD3;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
+#nav-bar{
+    display: flex;
+    align-items: center;
+    margin: 5rem 12rem 2rem 12rem;
+    padding:1rem;
+    justify-content: space-between;
+    border: 2px solid #004C1F;
+    border-radius: 60px;
+    background-color: white;
+    font-size: 20px;
+}
+
+
+/* #nav-bar{
+    display: flex;
+    align-items: center;
     margin: 5rem 12rem 2rem 12rem;
     padding:1rem;
     justify-content: space-between;
@@ -89,7 +211,7 @@
 
 .user-info img{
     border-radius: 50%;
-}
+} */
 
 .my-blog{
     margin-left: 12rem;
@@ -155,7 +277,11 @@
     transition: 0.2s;
 }
 
-.pagination{
+/* .pagination{
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 380px;
     text-align: center;
     margin-top: 90px;
     height: 44px;
@@ -170,9 +296,17 @@
     line-height: 24px;
     text-align: left;
     cursor: pointer;
+    text-decoration: none;
     color: #6E6E6E;
     padding-right: 10px;
 }
+
+#active{
+    background-color: #004C1F;
+    padding: 10px;
+    text-align: center;
+    color: #FFFFFF;
+} */
 
 #arrow{
     text-decoration: none;
