--- a/css/pages/consulting-page.css
+++ b/css/pages/consulting-page.css
@@ -21,6 +21,127 @@
 #nav-bar{
     display: flex;
     align-items: center;
+    margin: 5rem 12rem 7rem 12rem;
+    padding:1rem;
+    justify-content: space-between;
+    border: 2px solid white;
+    border-radius: 60px;
+    background-color: white;
+    font-size: 20px;
+}
+
+#nav-bar img{
+    width: 37px;
+    height: 56px;
+}
+
+#nav-bar h5{
+    color:#004C1F;
+    margin-left: -200px;
+}
+
+#nav-bar ul li{
+    list-style-type: none;
+    display:inline-block;
+    padding: 10px 20px;
+    font-weight: bold;
+}
+
+#nav-bar ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+#nav-bar ul li a:hover{
+    text-decoration: none;
+    color: #004C1F;
+    font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
+}
+
+#btn-1{
+    border: 3px solid green;
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (94px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 4px;
+    border-radius: 34px;
+    border: 2px solid #004C1F ;
+    }
+
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
+#btn-2{
+    border:none;
+    background-color: #004C1F;
+    color:#EBFDD3;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
+#nav-bar{
+    display: flex;
+    align-items: center;
+    margin: 5rem 12rem 2rem 12rem;
+    padding:1rem;
+    justify-content: space-between;
+    border: 2px solid #004C1F;
+    border-radius: 60px;
+    background-color: white;
+    font-size: 20px;
+}
+
+/* #nav-bar{
+    display: flex;
+    align-items: center;
     margin: 5rem 12rem 2rem 12rem;
     padding:1rem;
     justify-content: space-between;
@@ -89,7 +210,7 @@
 
 .user-info img{
     border-radius: 50%;
-}
+} */
 
 .consulting-page{
     margin-left: 12rem;
@@ -135,7 +256,7 @@
     border: 2px solid #004C1F;
     background-color: #004C1F;
     color: #F3F4E5;
-    width: 127.17px;
+    width: 145.17px;
     height: 39.76px;
     padding: 7.88px 15.76px 7.88px 15.76px;
     gap: 7.88px;
@@ -158,7 +279,7 @@
     border: 2px solid #004C1F;
     background-color: #004C1F;
     color: #F3F4E5;
-    width: 130px;
+    width: 145.17px;
     height: 42px;
     padding: 7.88px 15.76px 7.88px 15.76px;
     gap: 7.88px;
