--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -18,6 +18,116 @@
     background-size:cover;
 }
 
+
+#nav-bar{
+    display: flex;
+    align-items: center;
+    margin: 5rem 12rem 7rem 12rem;
+    padding:1rem;
+    justify-content: space-between;
+    border: 2px solid white;
+    border-radius: 60px;
+    background-color: white;
+    font-size: 20px;
+}
+
+#nav-bar img{
+    width: 37px;
+    height: 56px;
+}
+
+#nav-bar h5{
+    color:#004C1F;
+    margin-left: -200px;
+}
+
+#nav-bar ul li{
+    list-style-type: none;
+    display:inline-block;
+    padding: 10px 20px;
+    font-weight: bold;
+}
+
+#nav-bar ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+#nav-bar ul li a:hover{
+    text-decoration: none;
+    color: #004C1F;
+    font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
+}
+
+#btn-1{
+    border: 3px solid green;
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (94px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 4px;
+    border-radius: 34px;
+    border: 2px solid #004C1F ;
+    }
+
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
+#btn-2{
+    border:none;
+    background-color: #004C1F;
+    color:#EBFDD3;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
 #nav-bar{
     display: flex;
     align-items: center;
@@ -30,7 +140,7 @@
     font-size: 20px;
 }
 
-#nav-bar img{
+/* #nav-bar img{
     width: 37px;
     height: 56px;
 }
@@ -85,7 +195,7 @@
     border-radius: 50%;
     font-size: 24px;
     color: #FFFF;
-}
+} */
 
 #first-info{
     margin-left: 12rem;
@@ -116,6 +226,10 @@ nav ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+nav a{
+    text-decoration: none;
 }
 
 nav ul li{
@@ -303,6 +417,10 @@ nav ul li:hover{
     bottom: 40px;
     padding-left: 30px;
     cursor: pointer;
+}
+
+.product-1 a{
+    text-decoration: none;
 }
 
 .growth-plan-product{
@@ -718,7 +836,7 @@ hr{
 }
 
 .cart-info{
-    display: none;
+    display: block;
     margin-top: 12rem;
     margin-right: 12rem;
     margin-left: 30rem;
